<resources>
    <string name="app_name">PetCare</string>

    <string name="title_list">My Pets</string>
    <string name="title_add">New Pet</string>
    <string name="title_edit">Edit Pet</string>
    <string name="title_about">About the App</string>
    <string name="title_config">Settings</string>
    <string name="title_menu">Register Pet - PetCare</string>

    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_config">Settings</string>
    <string name="menu_options_title">Options</string>

    <string name="label_name">Pet Name:</string>
    <string name="hint_name">Enter pet name</string>
    <string name="label_breed">Breed:</string>
    <string name="hint_breed">Enter breed</string>
    <string name="label_birth">Birth Date:</string>
    <string name="label_born_format">Birth Date: %1$s</string>
    <string name="hint_birth">DD/MM/YYYY</string>
    <string name="label_species">Species:</string>
    <string name="format_species_breed">%1$s - %2$s</string>
    <string name="species_dog">Dog</string>
    <string name="species_cat">Cat</string>
    <string name="label_size">Size:</string>
    <string name="label_castrated">Castrated?</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>

    <string name="msg_cleared">Fields cleared successfully!</string>
    <string name="err_name_empty">Error: Pet name cannot be empty!</string>
    <string name="err_breed_empty">Error: Breed cannot be empty!</string>
    <string name="err_birth_empty">Error: Birth date cannot be empty!</string>
    <string name="err_date_format">Error: Invalid date format!</string>
    <string name="err_species_empty">Error: Select the pet species!</string>

    <string name="dialog_delete_title">Delete Pet</string>
    <string name="dialog_delete_message">Are you sure you want to delete this pet?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="label_dark_mode">Enable Dark Mode</string>
</resources>